# EasyFCGI

./: CMakeLists.txt  LICENSE  README.md  original_motivating_example.cpp
include/: EasyFCGI.cpp  EasyFCGI.h  EasyFCGI.hpp
include/EasyFCGI/: EasyFCGI.h
include/glaze/: version.hpp
include/glaze/core/: opts.hpp
include/glaze/net/: http_server.hpp
separate header/: EasyFCGI.cpp  EasyFCGI.h
src/: EasyFCGI.cpp
